# codedocent

./: .gitignore  README.md  benchmark.py  benchmark_results.txt  pyproject.toml
codedocent/: __init__.py  __main__.py  analyzer.py  cli.py  cloud_ai.py  editor.py  gui.py  ollama_utils.py  parser.py  quality.py  renderer.py  scanner.py  server.py
codedocent/templates/: base.html  interactive.html
tests/: test_analyzer.py  test_cli.py  test_cloud_ai.py  test_editor.py  test_gui.py  test_parser.py  test_renderer.py  test_scanner.py  test_server.py
