[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codedocent"
version = "0.1.0"
description = "Code visualization for non-programmers"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-language-pack>=0.13",
    "radon>=6.0",
    "pathspec>=0.11",
    "jinja2>=3.1",
    "ollama>=0.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.package-data]
codedocent = ["templates/*.html"]

[project.scripts]
codedocent = "codedocent.cli:main"
